# ChangeLog for app-emacs/emacs-common-gentoo
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*emacs-common-gentoo-9999-r1 (21 Jan 2015)

  21 Jan 2015; Ulrich Müller <ulm@gentoo.org>
  +emacs-common-gentoo-9999-r1.ebuild:
  Test new setgid games setup.

  21 Jan 2015; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Merge changes from Portage tree.

  19 Jan 2014; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Switch from package.mask to empty KEYWORDS.

  15 Nov 2013; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Install initial site-gentoo.el file from tarball.

  13 Nov 2013; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Refuse installation if the site-start.el file is still in its old location;
  we have warned about this since almost two years.

  31 Oct 2013; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Create site-gentoo.el in preinst phase and have it belong to this package.

  10 Oct 2013; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Migrate to git-r3.eclass.

  09 Aug 2013; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild:
  Update HOMEPAGE. Merge changes from Portage tree.

  10 Jun 2012; Ulrich Müller <ulm@gentoo.org>
  -emacs-common-gentoo-1.3-r2.ebuild:
  Moved to Portage tree.

  09 Jun 2012; Ulrich Müller <ulm@gentoo.org> emacs-common-gentoo-9999.ebuild,
  metadata.xml:
  Change live ebuild to use Git. Forward port changes from 1.3-r2.

*emacs-common-gentoo-1.3-r2 (06 Jun 2012)

  06 Jun 2012; Ulrich Müller <ulm@gentoo.org>
  +emacs-common-gentoo-1.3-r2.ebuild, metadata.xml:
  Copy from Portage tree. Move handling of game score files from emacs ebuilds
  to here. Create games user if necessary, bug 368647.

  29 Jan 2012; Ulrich Müller <ulm@gentoo.org> -emacs-common-gentoo-1.3.ebuild,
  emacs-common-gentoo-9999.ebuild:
  Sync from Portage tree.
